cloud/w10/day-c/gatekeeper/templates/k8sdisallowhostnetwork.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostnetwork

        pod_spec[spec] {
          spec := input.review.object.spec
        }

        pod_spec[spec] {
          spec := input.review.object.spec.template.spec
        }

        violation[{"msg": msg}] {
          pod_spec[_].hostNetwork == true
          msg := "hostNetwork=true is not allowed"
        }
