cloud/w10/day-c/gatekeeper/templates/k8sdisallowrootuser.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowrootuser
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRootUser
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowrootuser

        pod_security_context[ctx] {
          ctx := input.review.object.spec.securityContext
        }

        pod_security_context[ctx] {
          ctx := input.review.object.spec.template.spec.securityContext
        }

        containers[container] {
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          container := input.review.object.spec.template.spec.containers[_]
        }

        violation[{"msg": msg}] {
          pod_security_context[_].runAsUser == 0
          msg := "pod securityContext.runAsUser must not be 0"
        }

        violation[{"msg": msg}] {
          container := containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("container %q must not run as root user", [container.name])
        }
